# Anamoly_detector

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  start.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  config_service.py  exceptions.py  logger.py
backend/app/db/: credential_manager.py  query_loader.py  snowflake_client.py
backend/app/models/: schemas.py
backend/app/models/detectors/: base_detector.py  dbscan_detector.py  isolation_forest.py  zscore_detector.py
backend/app/services/: anomaly_service.py  data_service.py
backend/app/utils/: helpers.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/hooks/: useAnomalyDetection.ts  useTheme.ts
frontend/src/pages/: AnomalyDetails.tsx  Dashboard.tsx
frontend/src/services/: ApiClient.ts
frontend/src/store/: anomalyStore.tsx  themeStore.tsx
frontend/src/types/: index.ts
frontend/src/utils/: classNames.ts
src/anomaly_detection/: __init__.py  app.py  config.py  exceptions.py  logger.py  state.py
src/anomaly_detection/api/: router.py  schemas.py
src/anomaly_detection/config/: config.yaml
src/anomaly_detection/database/: credentials.py  queries.py  snowflake.py
src/anomaly_detection/detection/: base.py  dbscan.py  factory.py  isolation_forest.py  zscore.py
src/anomaly_detection/services/: data.py  detection.py
src/anomaly_detection/templates/: index.html
src/queries/: filename.sql  query.sql
(+14 files in other folders)
