[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detection-api"
version = "1.0.0"
description = "Anomaly Detection API with Snowflake integration"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "snowflake-connector-python[pandas]>=3.11.0",
    "snowflake-sqlalchemy>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.8.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.0.0",
]

[tool.setuptools]
packages = ["anomaly_detection"]
package-dir = { "" = "src" }
